[tool.poetry]
name = "visual-octopoes"
version = "0.1.0"
description = ""
authors = ["Benny <mail2benny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.17.1"
dash-cytoscape = "^1.0.2"
httpx = "^0.27.2"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
